# simple-FL

./: .gitignore  CHANGELOG.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  README.md  centralized_training.py  data_in_use  exp.sh  exp.yml  fl_training.py  pyproject.toml  requirements.txt  server_client.py  utils.py
configs/: config.yaml  datasets.yaml  methods.yaml
datasets/: amazon.py  cifar10.py  cifar100.py  fashionmnist.py  femnist.py  ml-100k.py  shakespeare.py  tinyimagenet.py
methods/: __init__.py  elastic.py  fedavg.py  fedavg_client_drift_only.py  fedavg_l.py  fedavg_period_drift_only.py  fedavgm.py  fedcda.py  fedcsd.py  feddf.py  feddyn.py  fedeve copy.py  fedeve.py  fedlea.py  fedleo copy 2.py  fedleo copy.py  fedleo.py  fedlow.py  fedmeta.py  fedopt.py  fedpa1.py  fedprox.py  fedrecom.py  fedspeed.py  fl.py  gaussian.py  mime.py  scaffold.py  等高线.ipynb
models/: __init__.py  aggregator.py  din_mcc.py  lstm copy.py  model_base.py  model_fn.py  resnet2.py
notebooks/: Gaussian.ipynb  NeurIPS_Rebuttal_Figures.ipynb  animation.ipynb  dirichlet.ipynb  fedleo.ipynb  figure.ipynb  period_drift_animation.py
scripts/: test_import.py  train_centralized.py  train_fl.py
simplefl/: __init__.py
simplefl/core/: __init__.py  client.py  data_init.py  server.py
simplefl/datasets/: __init__.py  _temp_data.py  alipay.py  amazon.py  cifar.py  cifar10.py  cifar100.py  common.py  fashion.py  femnist.py  last_fm.py  mcc.py  ml-100k.py  ml-1m.py  movielens.py  ogbg.py  shakespeare.py  stack_overflow.py  tinyimagenet.py
simplefl/methods/: __init__.py  elastic.py  fedavg.py  fedavg_client_drift_only.py  fedavg_l.py  fedavg_period_drift_only.py  fedavgm.py  fedcsd.py  feddf.py  feddyn.py  fedeve copy.py  fedeve.py  fedl2o.py  fedl2o_lstm.py  fedl2o_mamba.py  fedlea.py  fedleo copy 2.py  fedleo copy.py  fedleo.py  fedlion.py  fedlow.py  fedmeta.py  fednova.py  fedopt.py  fedpa1.py  fedprox.py  fedrecom.py  fedsam.py  fedspeed.py  gaussian.py  mime.py  moon.py  scaffold.py
simplefl/models/: __init__.py  cnn.py  din.py  dnn.py  lenet5.py  lstm.py  mlp.py  mobilenet.py  mpnn.py  resnet.py
simplefl/utils/: __init__.py  common.py  config.py  results.py
