[project]
name = "simple-fl"
version = "0.1.0"
description = "A Simple and Professional Federated Learning Framework"
readme = "README.md"
requires-python = ">=3.7,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Simple-FL Contributors", email = ""}
]
maintainers = [
    {name = "Simple-FL Contributors"}
]
keywords = [
    "federated-learning",
    "federated-learning-framework",
    "machine-learning",
    "deep-learning",
    "pytorch",
    "distributed-learning",
    "privacy-preserving",
    "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies - carefully versioned for compatibility
dependencies = [
    "torch>=1.9.0,<3.0.0",
    "torchvision>=0.10.0,<1.0.0",
    "numpy>=1.19.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scipy>=1.7.0,<2.0.0",
    "scikit-learn>=0.24.0,<2.0.0",
    "h5py>=3.1.0,<4.0.0",
    "PyYAML>=5.4.0,<7.0.0",
    "tqdm>=4.62.0,<5.0.0",
    "jsonargparse>=4.0.0,<5.0.0",
]

# Optional dependencies groups
# Install with: pip install simple-fl[tracking] or pip install simple-fl[all]
[project.optional-dependencies]
# Experiment tracking and monitoring
tracking = [
    "wandb>=0.12.0,<1.0.0",
]

# Data visualization and plotting
visualization = [
    "matplotlib>=3.4.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0; python_version >= '3.8'",
]

# Jupyter notebook support
notebooks = [
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.0.0,<7.0.0",
    "notebook>=6.4.0,<8.0.0",
]

# Database connectivity
database = [
    "pymysql>=1.0.0,<2.0.0",
    "sqlalchemy>=1.4.0,<3.0.0; python_version >= '3.7'",
]

# Development and testing tools
dev = [
    "pytest>=6.2.0,<8.0.0",
    "pytest-cov>=2.12.0,<5.0.0",
    "pytest-xdist>=2.5.0,<4.0.0",
    "black>=21.0,<24.0.0",
    "flake8>=3.9.0,<7.0.0",
    "isort>=5.10.0,<6.0.0",
    "mypy>=0.910,<2.0.0",
    "types-PyYAML>=5.4.0,<7.0.0",
    "pre-commit>=2.15.0,<4.0.0",
]

# Documentation tools
docs = [
    "sphinx>=4.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.0.0,<3.0.0",
    "myst-parser>=0.17.0,<3.0.0",
]

# All optional dependencies combined
all = [
    "simple-fl[tracking,visualization,notebooks,database]",
]

[project.urls]
Homepage = "https://github.com/tao-shen/simple-FL"
Repository = "https://github.com/tao-shen/simple-FL"
Documentation = "https://github.com/tao-shen/simple-FL#readme"
"Bug Tracker" = "https://github.com/tao-shen/simple-FL/issues"
Changelog = "https://github.com/tao-shen/simple-FL/releases"

[project.scripts]
# Uncomment to add command-line tools
# simple-fl = "simplefl.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Code Quality and Formatting Tools Configuration
# ============================================================================

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*", "*/build/*", "*/dist/*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    ".mypy_cache",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "wandb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.2"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=simplefl",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["simplefl"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]